Another fix for smooth scroll
Hopefully, this ought to set things straight. ScrollTop is messed up.

--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -7,13 +7,18 @@
 }
 
 html, body {
-  overflow-x: hidden !important;
+
 
   width: auto !important;
   height: 100%;
 }
-
+@-moz-document url-prefix() {
+    html, body {
+      overflow-x: hidden !important;
+    }
+}
 body {
+  overflow-x: hidden !important;
   background: #d7d3c8;
 }
 
